# extranet-operoo-web

./: .gitignore  Cargo.toml  index.html  xero.html
pkg/: extranet_operoo_diff_rs.js
src/: lib.rs
